# deskinator

./: .gitignore  ALGORITHM_FLOWCHART.md  HARDWARE_SETUP.md  I2C_SETUP.md  QUICK_START.md  README.md  buzz_on_space.py  buzzer_test.py  calibrate_wheels.py  config.py  distance_test.py  example_buzzer_usage.py  fan_test.py  main.py  main_ekf_backup.py  manual_stepper_control.py  motor_test.py  proximity_viewer.py  pyproject.toml  requirements.txt  robot_legend.xlsx  scan_i2c.py  simple_fan.py  test_adafruit_sensors.py  test_apds9960.py  test_hardware.py  todo.md  viz_demo.py
.matplotlib/: fontlist-v390.json
control/: fsm.py  limits.py  motion.py  wall_follower.py
deliverables/: report.typ
hw/: apds9960.py  buzzer.py  gesture.py  gpio.py  led.py  mpu6050.py  stepper.py  table_detector.py  vacuum.py
planning/: __init__.py  coverage.py  map2d.py
slam/: __init__.py  ekf.py  ekf_fusion.py  frames.py  posegraph.py  rect_fit.py  simple_odom.py
tests/: analysis_utils.py  buzz_on_space.py  calibrate_wheels.py  distance_test.py  manual_stepper_control.py  motor_test.py  pose_viewer.py  proximity_viewer.py  read_summary.py  robot_testing.py  test_perimeter.py  visualize_motor_errors.py  visualize_results.py  viz_demo.py
tests/results/no-offset/: robot_test_results_no_offset.xlsx
utils/: timing.py  viz.py
