[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deskinator"
version = "0.1.0"
description = "Autonomous desk cleaning robot with SLAM"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "EK210 Team"}
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "networkx>=3.2",
    "smbus2>=0.4",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7",
    "pyqtgraph>=0.13",
]
rpi = [
    "RPi.GPIO; platform_system=='Linux'",
]

[project.scripts]
deskinator = "deskinator.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deskinator*"]
